[gd_scene load_steps=2 format=3 uid="uid://dm4sq6ejryvsf"]

[ext_resource type="Script" path="res://scripts/components/hud.gd" id="1_0a1b5"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0a1b5")

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0

[node name="MoneyLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Money: $0.00"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Time: 0.0s"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Status: Ready"
horizontal_alignment = 1

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0

[node name="MenuButton" type="Button" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Menu"

[node name="PauseButton" type="Button" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pause"

[node name="SaveButton" type="Button" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="CenterArea" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 50.0
offset_bottom = -50.0
offset_left = 20.0
offset_right = -20.0

[node name="GameInfo" type="VBoxContainer" parent="CenterArea"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProductionInfo" type="Label" parent="CenterArea/GameInfo"]
layout_mode = 2
text = "Production: 0 hot dogs"
horizontal_alignment = 1

[node name="QueueInfo" type="Label" parent="CenterArea/GameInfo"]
layout_mode = 2
text = "Queue: 0/10"
horizontal_alignment = 1

[node name="AddHotDogButton" type="Button" parent="CenterArea"]
layout_mode = 2
text = "Add Hot Dog to Queue" 